*SVN*

* Fixed DateHelper#date_select so that you can pass include_blank as an option even if you don't use start_year and end_year #59 [what-a-day]

* Added that controllers will now search for a layout in $template_root/layouts/$controller_name.r(html|xml), so PostsController will look
  for layouts/posts.rhtml or layouts/posts.rxml and automatically configure this layout if found #307 [Marcel]

* Added FormHelper#radio_button to work with radio buttons like its already possible with check boxes [Michael Koziarski]

* Added TemplateError#backtrace that makes it much easier to debug template errors from unit and functional tests

* Added display of error messages with scaffolded form pages

* Added option to ERB templates to swallow newlines by using <% if something -%> instead of just <% if something %>. Example:

    class SomeController < ApplicationController
    <% if options[:scaffold] %>
      scaffold :<%= singular_name %>
    <% end %>
      helper :post
  
  ...produces this on post as singular_name:

    class SomeController < ApplicationController
    
      scaffold :post
    
      helper :post
  
  ...where as:

    class SomeController < ApplicationController
    <% if options[:scaffold] -%>
      scaffold :<%= singular_name %>
    <% end -%>
      helper :post
  
  ...produces:

    class SomeController < ApplicationController
      scaffold :post
      helper :post
  
  [This undocumented gem for ERb was uncovered by bitsweat]

* Fixed CgiRequest so that it'll now accept session options with Symbols as keys (as the documentation points out) [Suggested by Andreas]

* Added that render_partial will always by default include a counter with value 1 unless there is a counter passed in via the 
  local_assigns hash that overrides it. As a result, render_collection_of_partials can still be written in terms of render_partial
  and partials that make use of a counter can be called without problems from both render_collection_of_partials as well as